# groonga-tokenizer-sample

tokenizers/: Makefile.am  wordnet.c
